@@ -16,6 +16,7 @@
  * License along with this library; if not, write to the
  * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.
+ADB HIG'd error dialog READY FOR COMMIT
  */
 
 #ifndef __GTKAM_ERROR_H__
